--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="emerald">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZN5F53FEX0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZN5F53FEX0');
+    </script>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/img/laniw_logo-tight.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
