Fixes prettier issues

--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,17 @@
 <html lang="en" data-theme="emerald">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZN5F53FEX0"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-ZN5F53FEX0"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-ZN5F53FEX0');
+      gtag("config", "G-ZN5F53FEX0");
     </script>
 
     <meta charset="utf-8" />
