Adds content outline and styles card container.

--- a/web-components/index.html
+++ b/web-components/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Lani Wagner</title>
     <script src="./content/root.js" type="module"></script>
+    <link rel="stylesheet" href="./global.css">
   </head>
   <body>
     <p-root></p-root>
